# Axis_AMM

./: .gitignore  DEVNET_TESTING.md  README.md  package.json
.github/workflows/: ci.yml  e2e-devnet.yml  litesvm-jupiter-cpi.yml  main-report.yml  reusable-e2e-local.yml  reusable-rust-and-typescript.yml  reusable-rust.yml
axis-vault/: Cargo.toml
benchmark/: package-lock.json
ci/: _common.sh  build-sbf.sh  e2e-local-prepare.sh  jest.sh
contracts/ab-integration-tests/: Cargo.toml
contracts/ab-integration-tests/fixtures/backtest/: jup_calibration.json  prices.csv
contracts/ab-integration-tests/fixtures/backtest/jup_routes/: README.md
contracts/ab-integration-tests/mock-jupiter/: Cargo.toml
contracts/ab-integration-tests/mock-jupiter/src/: lib.rs
contracts/ab-integration-tests/src/helpers/: account_builder.rs  backtest.rs  mainnet_fork.rs  metrics.rs  mod.rs  svm_setup.rs  token_factory.rs
contracts/ab-integration-tests/tests/: ab_comparison.rs  axis_g3m_coverage.rs  axis_vault_coverage.rs  axis_vault_rebalance.rs  axis_vault_setfee_setcap.rs  axis_vault_sol_ix_scaffold.rs  axis_vault_withdraw_sol_bound.rs  backtest.rs  close_delay.rs  issue_59_coverage.rs  issue_61_coverage.rs  pfda3_claim_coverage.rs  pfda_amm_coverage.rs  refresh_backtest_fixtures.rs  scenario_coverage.rs
contracts/axis-g3m/src/: error.rs  lib.rs
contracts/axis-vault/: Cargo.toml
contracts/axis-vault/src/: constants.rs  error.rs  jupiter.rs  lib.rs  metaplex.rs
contracts/axis-vault/src/instructions/: apply_weights.rs  create_etf.rs  deposit.rs  deposit_sol.rs  mod.rs  propose_weights.rs  rebalance.rs  set_cap.rs  set_fee.rs  set_paused.rs  sweep_treasury.rs  withdraw.rs  withdraw_sol.rs
contracts/axis-vault/src/state/: etf.rs  mod.rs  rebalance.rs
contracts/pfda-amm-3/: Cargo.toml
contracts/pfda-amm-3/src/: constants.rs  error.rs  lib.rs  oracle.rs
contracts/pfda-amm-3/src/instructions/: add_liquidity.rs  claim.rs  clear_batch.rs  close_batch_history.rs  initialize_pool.rs  mod.rs  set_batch_id.rs  set_paused.rs  swap_request.rs  withdraw_fees.rs
contracts/pfda-amm-3/src/state/: mod.rs
contracts/pfda-amm/src/: error.rs  lib.rs  oracle.rs
docs/architecture/: AXIS_VAULT_V1_1_SPEC.md  MAINNET_SCOPE.md  RFC_FIRST_DEPOSIT_VALUE_NORMALIZATION.md
docs/ops/: MAINNET_FORK_RUNBOOK.md  SOLSCAN_VERIFY_RUNBOOK.md  SQUADS_RUNBOOK.md
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CreateEtfPanel.tsx  JupiterSeedPreviewCard.tsx  PfmmControls.tsx  PfmmPanel.tsx  PoolsPanel.tsx  ProgramCard.tsx  RebalancePanel.tsx  ScopeNote.tsx  TokensPanel.tsx  WalletPanel.tsx  WalletProvider.tsx  WithdrawPanel.tsx  WithdrawSolPanel.tsx
frontend/src/lib/: depositSolPlan.ts  etfState.ts  format.ts  ix.ts  jupiter.ts  jupiterSeed.ts  pfmmSeedPlan.ts  pfmmState.ts  programs.ts  spl.ts  tokens.ts  tx.ts  withdrawSolPlan.ts
idl/: axis_vault.json  pfda_amm_3.json
legacy/axis-g3m/src/: error.rs  jupiter.rs
legacy/pfda-amm/src/: error.rs
legacy/solana-tfmm-rs/scripts/: plot_paper_full_set.py
reports/ab/: latest.json  latest.md
scripts/: package-lock.json  package.json  run-ab-rehearsal.ts  switchboard-feeds.json
scripts/axis-vault/: README.md  demo.stub.test.ts  demo.ts  deposit-sol.ts  jupiter.ts  withdraw-sol.ts
scripts/ops/: build-extend-program-ix.ts  deploy-devnet.sh  dump-jupiter-fixture-accounts.sh  fetch-jupiter-quote.ts  flip-protocol-treasury.ts  refresh-jupiter-fixture.sh  verify-build.sh
solana-tfmm-rs/: README.md
solana-tfmm-rs/scripts/: csv_to_png.py  plot_paper_full_set.py
test/ab/: ab-rehearsal.ts
test/benchmark/: ab-cu-benchmark.ts
test/frontend/: etfState.test.ts  ix.test.ts  programs.test.ts
test/jest/: ci-structure.test.cjs
(+63 files in other folders)
