[package]
name = "ab-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[test]]
name = "ab_comparison"
path = "tests/ab_comparison.rs"

[[test]]
name = "close_delay"
path = "tests/close_delay.rs"

[[test]]
name = "scenario_coverage"
path = "tests/scenario_coverage.rs"

[[test]]
name = "pfda_amm_coverage"
path = "tests/pfda_amm_coverage.rs"

[[test]]
name = "axis_g3m_coverage"
path = "tests/axis_g3m_coverage.rs"

[[test]]
name = "pfda3_claim_coverage"
path = "tests/pfda3_claim_coverage.rs"

[[test]]
name = "axis_vault_coverage"
path = "tests/axis_vault_coverage.rs"

[[test]]
name = "axis_vault_sol_ix_scaffold"
path = "tests/axis_vault_sol_ix_scaffold.rs"

[dependencies]
litesvm = "0.11"
solana-keypair = "3.1"
solana-signer = "3"
solana-instruction = "3"
solana-transaction = "3"
solana-message = "3"
solana-hash = "3"
solana-address = "2"
solana-account = "3"
solana-native-token = "3"
solana-rpc-client = "3"
solana-clock = "3"
solana-signature = ">=3.3, <3.4"
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
