[package]
name = "mock-jupiter"
version = "0.1.0"
edition = "2021"
publish = false
description = "Drain-only Jupiter substitute used by axis-vault WithdrawSol bound tests."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9"
pinocchio-token = "0.4"

[features]
no-entrypoint = []

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
overflow-checks = true
panic = "abort"
strip = true
